<resources>
    <string name="app_name">ErasmusInfo</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="contact">Contacts</string>
    <string name="college">Colleges</string>
    <string name="subject">Subjects</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_view_button">View Profile</string>
    <string name="profile_insert_button">Insert Profile</string>
    <string name="profile_edit_button">Edit Profile</string>
    <string name="profile_delete_button">Delete Profile</string>
    <string name="title_activity_profile_view">View Profile</string>
    <string name="profile_view_textView_hint_name">Name:</string>
    <string name="profile_view_textView_example_name">John Doe</string>
    <string name="profile_view_textView_hint_birthDate">Date of birth:</string>
    <string name="profile_view_textView_example_birthDate">07/04/2019</string>
    <string name="title_activity_profile_insert">Insert Profile</string>
    <string name="profile_insert_textInputEditText_hint_name">Name:</string>
    <string name="profile_insert_textInputEditText_hint_birthDate">Date of birth:</string>
    <string name="profile_insert_button_save">Save</string>
    <string name="profile_insert_button_cancel">Cancel</string>
    <string name="profile_insert_textInputEditText_error_name">Please enter a name.</string>
    <string name="profile_insert_textInputEditText_error_birthDate">Please enter a date of birth.</string>
    <string name="profile_insert_toast_saved">Data saved with success!</string>
    <string name="profile_insert_toast_canceled">Canceled!</string>
    <string name="title_activity_profile_edit">Edit Profile</string>
    <string name="profile_edit_textInputEditText_hint_name">Name:</string>
    <string name="profile_edit_textInputEditText_hint_birthDate">Date of birth:</string>
    <string name="profile_edit_button_save">Save</string>
    <string name="profile_edit_button_cancel">Cancel</string>
    <string name="profile_edit_textInputEditText_error_name">Please enter a name.</string>
    <string name="profile_edit_textInputEditText_error_birthDate">Please enter a date of birth.</string>
    <string name="profile_edit_toast_saved">Data saved with success!</string>
    <string name="profile_edit_toast_canceled">Canceled!</string>
    <string name="title_activity_profile_delete">Delete Profile</string>
    <string name="profile_delete_textView_hint_name">Name:</string>
    <string name="profile_delete_textView_example_name">John Doe</string>
    <string name="profile_delete_textView_hint_birthDate">Date of birth:</string>
    <string name="profile_delete_textView_example_birthDate">07/04/2019</string>
    <string name="profile_delete_button_delete">Delete</string>
    <string name="profile_delete_button_cancel">Cancel</string>
    <string name="profile_delete_toast_deleted">... successfully deleted</string>
    <string name="profile_delete_toast_canceled">Canceled</string>
    <string name="title_activity_contact">Contacts</string>
    <string name="contact_view_button">View Contact</string>
    <string name="contact_insert_button">Insert Contact</string>
    <string name="contact_edit_button">Edit Contact</string>
    <string name="contact_delete_button">Delete Contact</string>
    <string name="title_activity_contact_view">View Contact</string>
    <string name="contact_view_textView_hint_name">Name:</string>
    <string name="contact_view_textView_example_name">John Doe</string>
    <string name="contact_view_textView_hint_number">Number:</string>
    <string name="contact_view_textView_example_number">987654321</string>
    <string name="title_activity_contact_insert">Insert Contact</string>
    <string name="contact_insert_textInputEditText_hint_name">Name:</string>
    <string name="contact_insert_textInputEditText_hint_number">Number:</string>
    <string name="contact_insert_button_save">Save</string>
    <string name="contact_insert_button_cancel">Cancel</string>
    <string name="contact_insert_textInputEditText_error_name">Please enter a name.</string>
    <string name="contact_insert_textInputEditText_error_number">Please enter a number.</string>
    <string name="contact_insert_toast_saved">Data saved with success!</string>
    <string name="contact_insert_toast_canceled">Canceled!</string>
    <string name="title_activity_contact_edit">Edit Contact</string>
    <string name="contact_edit_textInputEditText_hint_name">Name:</string>
    <string name="contact_edit_textInputEditText_hint_number">Number:</string>
    <string name="contact_edit_button_save">Save</string>
    <string name="contact_edit_button_cancel">Cancel</string>
    <string name="contact_edit_textInputEditText_error_name">Please enter a name.</string>
    <string name="contact_edit_textInputEditText_error_number">Please enter a number.</string>
    <string name="contact_edit_toast_saved">Data saved with success!</string>
    <string name="contact_edit_toast_canceled">Canceled!</string>
    <string name="title_activity_contact_delete">Delete Contact</string>
    <string name="contact_delete_textView_hint_name">Name:</string>
    <string name="contact_delete_textView_example_name">John Doe</string>
    <string name="contact_delete_textView_hint_number">Number:</string>
    <string name="contact_delete_textView_example_number">987654321</string>
    <string name="contact_delete_button_delete">Delete</string>
    <string name="contact_delete_button_cancel">Cancel</string>
    <string name="contact_delete_toast_deleted">... successfully deleted</string>
    <string name="contact_delete_toast_canceled">Canceled</string>
    <string name="title_activity_college">Colleges</string>
    <string name="college_insert_button">Insert College</string>
    <string name="college_edit_button">Edit College</string>
    <string name="college_delete_button">Delete College</string>
    <string name="title_activity_college_insert">Insert College</string>
    <string name="college_insert_textInputEditText_hint_code">Code:</string>
    <string name="college_insert_textInputEditText_hint_name">Name:</string>
    <string name="college_insert_textInputEditText_hint_ects">ECTs:</string>
    <string name="college_insert_textInputEditText_hint_discEqual">Equivalent College:</string>
    <string name="college_insert_textInputEditText_hint_score">Score:</string>
    <string name="college_insert_button_save">Save</string>
    <string name="college_insert_button_cancel">Cancel</string>
    <string name="college_insert_textInputEditText_error_code">Please enter a code.</string>
    <string name="college_insert_textInputEditText_error_name">Please enter a name.</string>
    <string name="college_insert_textInputEditText_error_ects">Please enter the ECTs.</string>
    <string name="college_insert_textInputEditText_error_discEqual">Please enter an equivalent college.</string>
    <string name="college_insert_textInputEditText_error_score">Please enter a score.</string>
    <string name="college_insert_toast_saved">Data saved with success!</string>
    <string name="college_insert_toast_canceled">Canceled!</string>
    <string name="title_activity_college_edit">Edit College</string>
    <string name="college_edit_textInputEditText_hint_code">Code:</string>
    <string name="college_edit_textInputEditText_hint_name">Name:</string>
    <string name="college_edit_textInputEditText_hint_ects">ECTs:</string>
    <string name="college_edit_textInputEditText_hint_discEqual">Equivalent College:</string>
    <string name="college_edit_textInputEditText_hint_score">Score:</string>
    <string name="college_edit_button_save">Save</string>
    <string name="college_edit_button_cancel">Cancel</string>
    <string name="college_edit_textInputEditText_error_code">Please enter a code.</string>
    <string name="college_edit_textInputEditText_error_name">Please enter a name.</string>
    <string name="college_edit_textInputEditText_error_ects">Please enter the ECTs.</string>
    <string name="college_edit_textInputEditText_error_discEqual">Please enter an equivalent college.</string>
    <string name="college_edit_textInputEditText_error_score">Please enter a score.</string>
    <string name="college_edit_toast_saved">Data saved with success!</string>
    <string name="college_edit_toast_canceled">Canceled!</string>
    <string name="title_activity_college_delete">Delete College</string>
    <string name="college_delete_textView_hint_code">Code:</string>
    <string name="college_delete_textView_example_code">UINF8800</string>
    <string name="college_delete_textView_hint_name">Name:</string>
    <string name="college_delete_textView_example_name">Advanced Programming</string>
    <string name="college_delete_textView_hint_ects">ECTs:</string>
    <string name="college_delete_textView_example_ects">6</string>
    <string name="college_delete_textView_hint_discEqual">Equivalent College:</string>
    <string name="college_delete_textView_example_discEqual">Progarmação Avançada</string>
    <string name="college_delete_textView_hint_score">Score:</string>
    <string name="college_delete_textView_example_score">B</string>
    <string name="college_delete_button_delete">Delete</string>
    <string name="college_delete_button_cancel">Cancel</string>
    <string name="college_delete_toast_deleted">... successfully deleted</string>
    <string name="college_delete_toast_canceled">Canceled</string>
    <string name="title_activity_subject">Subjects</string>
    <string name="subject_insert_button">Insert Subject</string>
    <string name="subject_edit_button">Edit Subject</string>
    <string name="subject_delete_button">Delete Subject</string>
    <string name="title_activity_subject_insert">Insert Subject</string>
    <string name="subject_insert_textInputEditText_hint_code">Code:</string>
    <string name="subject_insert_textInputEditText_hint_name">Name:</string>
    <string name="subject_insert_textInputEditText_hint_ects">ECTs:</string>
    <string name="subject_insert_textInputEditText_hint_discEqual">Equivalent Subject:</string>
    <string name="subject_insert_textInputEditText_hint_score">Score:</string>
    <string name="subject_insert_button_save">Save</string>
    <string name="subject_insert_button_cancel">Cancel</string>
    <string name="subject_insert_textInputEditText_error_code">Please enter a code.</string>
    <string name="subject_insert_textInputEditText_error_name">Please enter a name.</string>
    <string name="subject_insert_textInputEditText_error_ects">Please enter the ECTs.</string>
    <string name="subject_insert_textInputEditText_error_discEqual">Please enter an equivalent subject.</string>
    <string name="subject_insert_textInputEditText_error_score">Please enter a score.</string>
    <string name="subject_insert_toast_saved">Data saved with success!</string>
    <string name="subject_insert_toast_canceled">Canceled!</string>
    <string name="title_activity_subject_edit">Edit Subject</string>
    <string name="subject_edit_textInputEditText_hint_code">Code:</string>
    <string name="subject_edit_textInputEditText_hint_name">Name:</string>
    <string name="subject_delete_textView_hint_code">Code:</string>
    <string name="subject_delete_textView_example_code">UINF8800</string>
    <string name="subject_delete_textView_hint_name">Name:</string>
    <string name="subject_delete_textView_example_name">Advanced Programming</string>
    <string name="subject_delete_textView_hint_ects">ECTs:</string>
    <string name="subject_delete_textView_example_ects">6</string>
    <string name="subject_delete_textView_hint_discEqual">Equivalent Subject:</string>
    <string name="subject_delete_textView_example_discEqual">Progarmação Avançada</string>
    <string name="subject_delete_textView_hint_score">Score:</string>
    <string name="subject_delete_textView_example_score">B</string>
</resources>