<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContactDelete"
    tools:showIn="@layout/activity_contact_delete">

    <TextView
        android:id="@+id/textViewContactNameHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:ems="10"
        android:text="@string/contact_delete_textView_hint_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <TextView
        android:id="@+id/textViewContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:ems="10"
        android:text="@string/contact_delete_textView_example_name"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />

    <TextView
        android:id="@+id/textViewContactNumberHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:ems="10"
        android:text="@string/contact_delete_textView_hint_number"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title" />

    <TextView
        android:id="@+id/textViewProfileDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:ems="10"
        android:text="@string/contact_delete_textView_example_number"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />

    <Button
        android:id="@+id/buttonContactDelete"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:onClick="contactDelete"
        android:text="@string/contact_delete_button_delete"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />

    <Button
        android:id="@+id/buttonContactCancel"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:onClick="contactCancel"
        android:text="@string/contact_delete_button_cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
</LinearLayout>