<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
    <Button
        android:id="@+id/buttonPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:background="@drawable/btn_rounded"
        android:onClick="openProfile"
        android:text="@string/profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Button
        android:id="@+id/buttonContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:background="@drawable/btn_rounded"
        android:onClick="openContact"
        android:text="@string/contact"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Button
        android:id="@+id/buttonUniversidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:background="@drawable/btn_rounded"
        android:onClick="openCollege"
        android:text="@string/college"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <!-- ToDo: Renomear as strings; -->
    <Button
        android:id="@+id/buttonDisciplinas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:background="@drawable/btn_rounded"
        android:onClick="openClass"
        android:text="@string/subject"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>