<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Subject"
    tools:showIn="@layout/activity_subject">

    <Button
        android:id="@+id/buttonInsert"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:onClick="openContactInsert"
        android:text="@string/contact_insert_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Button
        android:id="@+id/buttonEdit"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:onClick="openContactEdit"
        android:text="@string/contact_edit_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Button
        android:id="@+id/buttonDelete"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:onClick="openContactDelete"
        android:text="@string/contact_delete_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

</LinearLayout>