<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContactInsert"
    tools:showIn="@layout/activity_contact_insert">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:ems="10"
            android:hint="@string/contact_insert_textInputEditText_hint_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/contact_insert_textInputEditText_hint_number"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonContactSave"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:onClick="contactSave"
        android:text="@string/contact_insert_button_save"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />

    <Button
        android:id="@+id/buttonContactCancel"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:onClick="contactCancel"
        android:text="@string/contact_insert_button_cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
</LinearLayout>
